Adding italian provinces to demo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ and a <a href="https://github.com/sabas/OSRMdistance/blob/master/README.md">READ
 <h2>Demo results</h2>
 <ul>
 <li><a href="italy/region_distance.html">Italy Regions</a></li>
+<li><a href="italy/province_distance.html">Italy Provinces</a></li>
 </ul>
 </body>
 </html>
