--- a/italy/province_distance.html
+++ b/italy/province_distance.html
@@ -33,8 +33,8 @@
                                 return mp["time"] / 3600;
                             }
                         },
-						rows:["from","to"],	
-						//cols:["to"],
+						rows:["from"],	
+						cols:["to"],
 						vals:["Distance", "Time"],
 						aggregatorName:["sum"]
                     });
