--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@ and a <a href="https://github.com/sabas/OSRMdistance/blob/master/README.md">READ
 <li><a href="italy/region_distance.html">Italy Regions</a></li>
 <li><a href="italy/province_distance.html">Italy Provinces</a></li>
 </ul>
+
+<h2>Demo visualizations</h2>
+<ul>
+<li><a href="italy/bardistance.html">Italy Regions Bar Graph (by dforsi)</a></li>
+</ul>
+
 </body>
 </html>
