--- a/italy/region_distance.html
+++ b/italy/region_distance.html
@@ -1,48 +1,218 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Italy Regions Distance Table</title>
-        <link rel="stylesheet" type="text/css" href="../script/pivot.css">
-        <script type="text/javascript" src="../script/jquery-1.8.3.min.js"></script>
-        <script type="text/javascript" src="../script/jquery-ui-1.9.2.custom.min.js"></script>
-        <script type="text/javascript" src="../script/pivot.js"></script>
-        <style>
-        * {font-family: Verdana;}
-        body{width:80%;}
-		</style>
-    </head>
-    <body>
-<a href="https://github.com/sabas/OSRMdistance"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
-	
-	<h1>Italy Regions Distance Table</h1>
-	<p>Distances calculated between administrative centers of each region, expressed in kilometers. To see the estimated time switch fields "Distance" and "Time" in the pivot table</p>
-	<p>Data: <a href="http://download.geofabrik.de/europe.html">Geofabrik extract</a> of </a>03/08/2013</p>
-	<p><a href="source/capoluoghiregione.csv">Source csv</a> and <a href="capoluoghidistance.csv">output csv</a>
-        <div id="output" style="margin: 30px;"></div>
-        <script type="text/javascript">
-            $(function(){
-                var derivers = $.pivotUtilities.derivers;
+<meta charset="utf-8">
+<title>Grafico distanze</title>
+<style type="text/css">
 
-                $.getJSON("json/capoluoghidistance.csv.json", function(mps) {
-                    $("#output").pivotUI(mps, {
-                        derivedAttributes: {
-                            "Distance": function(mp) {
-                                return mp["distance"] /1000;
-                            },
-                            "Time": function(mp) {
-                                return mp["time"] / 3600;
-                            }
-                        },
-						rows:["from"],	
-						cols:["to"],
-						vals:["Distance", "Time"],
-						aggregatorName:["sum"]
-                    });
-                });
-             });
-        </script>
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 960px;
+  margin: auto;
+}
 
+.axis text {
+  font: 10px sans-serif;
+}
 
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
 
-    </body>
-</html>
+.bar {
+  fill: steelblue;
+  fill-opacity: .9;
+}
+
+.bar:hover {
+  fill: lightblue;
+  cursor: pointer;
+}
+
+label {
+  float: right;
+  top: 1em;
+  right: 10px;
+}
+
+#title {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+#license {
+  font-size: 75%;
+  text-align: center;
+}
+
+.d3-tip table tr :first-child {
+  text-align: right;
+  font-size: 75%;
+}
+
+.d3-tip table tr td {
+  vertical-align: baseline;
+}
+</style>
+<div id="chart">
+<h2 id="title"></h2>
+<label><input type="checkbox"> A-Z</label>
+</div>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<link rel="stylesheet" href="../script/tooltips.css"/>
+<script src="../script/tooltips.js"></script>
+<script type="text/javascript">
+/*
+ * CC-BY Daniele Forsi <dforsi at gmail dot com> 10/09/2014
+ * inspired by various tutorials and examples, thank you guys!
+ */
+
+var margin = {top: 20, right: 20, bottom: 30, left: 60},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var svg = d3.select("#chart").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+var dsv = d3.dsv(";", "text/csv");
+dsv("csv/capoluoghidistance.csv", function(d) {
+  d.distance = +d.distance / 1000; // converti in numero e poi in chilometri
+  d.time = +d.time / 60; // converti in numero e poi in minuti
+  return d;
+}, function(error, unfiltereddata) {
+
+  var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .25, 1);
+
+  var y = d3.scale.linear()
+    .range([height, 0]);
+
+  var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+  var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .tickFormat(function(d) { return d; });
+
+  var tip = d3.tip()
+    .attr('class', 'd3-tip')
+    .offset([-10, 0])
+    .html(function(d) {
+      hh = d.time / 60;
+      mm = d.time % 60;
+      time = d3.format("f")(hh) + ":" + d3.format("02f")(mm)
+      return "<table><tr><td>Da:</td><td>" + d.from + "</td></tr><tr><td>A:</td><td>" + d.to + "</td><tr><td>km:</td><td>" + d3.round(d.distance) + "</td></tr><tr><td>Ore:</td><td>" + time + "</td></tr></table>";
+    })
+
+  svg.call(tip);
+
+  function update(value) {
+    d3
+      .select("#title")
+        .datum(value)
+        .html(function (d) { return "Distanza da " + d + " a..."; });
+
+    var data = unfiltereddata
+      .filter(function (d) { return d.from == value });
+
+    var checked = d3.select("input").property("checked")
+
+    // Copy-on-write since tweens are evaluated after a delay.
+    var x0 = x.domain(data
+      .sort(checked
+        ? function(a, b) { return d3.ascending(a.to, b.to); }
+        : function(a, b) { return b.distance - a.distance; })
+      .map(function(d) { return d.to; }))
+      .copy();
+
+    var transition = svg.transition().duration(750);
+
+    transition
+      .select(".x.axis")
+        .call(xAxis);
+
+    // DATA JOIN
+    // Join new data with old elements, if any.
+    var bar = svg
+      .selectAll("rect")
+        .data(data, function(d) { return d.to; });
+
+    // UPDATE
+    // Update old elements as needed.
+    //bar.attr("class", "update");
+
+    // ENTER
+    // Create new elements as needed.
+    bar
+      .enter()
+      .append("rect")
+        .attr("class", "bar")
+        .attr("x", function(d) { return x(d.to); })
+        .attr("width", x.rangeBand())
+        .attr("y", height)
+        .attr("height", 0)
+        .on("click", function(d) { update(d.to); })
+        .on('mouseover', tip.show)
+        .on('mouseout', tip.hide);
+
+    // ENTER + UPDATE
+    // Appending to the enter selection expands the update selection to include
+    // entering elements; so, operations on the update selection after appending to
+    // the enter selection will apply to both entering and updating nodes.
+    transition
+      .selectAll(".bar")
+        .attr("x", function(d) { return x(d.to); })
+        .attr("y", function(d) { return y(d.distance); })
+        .attr("height", function(d) { return height - y(d.distance); });
+
+    // EXIT
+    // Remove old elements as needed.
+    bar
+      .exit()
+        .remove();
+
+    tip.hide();
+  }
+
+  x.domain(unfiltereddata.map(function(d) { return d.to; }));
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis)
+    .append("text")
+      .attr("x", "1em")
+      .attr("y", "-.5em")
+      .text("città");
+
+  y.domain([0, d3.max(unfiltereddata, function(d) { return d.distance; })]);
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", "1em")
+      .attr("dy", ".5em")
+      .style("text-anchor", "end")
+      .text("distanza (km)");
+
+  d3.select("#chart")
+    .append("p")
+      .text("Fare clic su una barra del grafico per scegliere la città di partenza.")
+      .style("text-align", "center");
+
+  d3.select("#chart")
+    .append("p")
+    .attr("id", "license")
+    .html('Elaborazione di Stefano Sabatini su dati ODbL <a href="http://openstreetmap.org/copyright">&copy; OpenStreetMap contributors</a>. Grafico CC-BY <a href="mailto:dforsi@gmail.com">Daniele Forsi</a>.');
+
+  update("Roma");
+  d3.select("input").on("change", function() {current = d3.select("#title").data(); update(current); });
+});
+
+</script>
